--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <h1>My Project Photo Gallery</h1>
     </header>
     <div class="gallery">
-      <img src="images/FLexBox.png">
-      <img src="images/PersonalPortWebpage.png">
-      <img src="images/ProductLandingPage.png">
-      <img src="images/RegForm.png">
-      <img src="images/SurvForm.png">
-      <img src="images/TechPage.png">
-      <img src="images/TributePage.png">
+      <img src="./FLexBox.png">
+      <img src="./PersonalPortWebpage.png">
+      <img src="./ProductLandingPage.png">
+      <img src="./RegForm.png">
+      <img src="./SurvForm.png">
+      <img src="./TechPage.png">
+      <img src="./TributePage.png">
 
     </div>
   </body>
