--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <h1>My Project Photo Gallery</h1>
     </header>
     <div class="gallery">
-      <img src="./FLexBox.png">
+     <a href="https://nv22179.github.io/-Flexbox-by-Building-a-Photo-Gallery/" target="_blank">
+        <img src="./FLexBox.png">
+     </a>
       <img src="./PersonalPortWebpage.png">
       <img src="./ProductLandingPage.png">
       <img src="./RegForm.png">
